syntax = "proto3";

option cc_generic_services = true;

enum MessageType
{
  ClientMessages = 0;
  EchoMessages = 1;
  ERROR = 2; // not used
}

message ClientMessage {   // 客户端使用的数据格式
  bytes Param = 1;
  int32 Size = 2;
}

message EchoMessage{
  string Result = 1;
  int32 Size = 2;
}

message MessagePack{  // 客户端所发送的数据包格式
  bytes data = 1;
  string Method = 2;    // 客户端所调用的方法名称
  string Service = 3;    // 客户端所调用的服务名称
  string PackType = 4;  // 用来记录 data 序列化之前的格式
}

message EchoPack{
  EchoMessage EchoMessage = 1;
  bool status = 2;
  bool done = 3;
  string PackType = 4;
}

/// 外面的是服务Service，里面的是方法Method
service EchoService {
  rpc Query(ClientMessage) returns(EchoMessage);
  rpc echo(ClientMessage) returns(EchoMessage);
  rpc handleImage(ClientMessage) returns(EchoMessage);
}